# stable-coin

./: .gitignore  Cargo.toml  README.md  lints.toml
applications/cli/: Cargo.toml
applications/cli/src/: cli.rs  context.rs  main.rs  print_result.rs  transactions.rs  value_parsers.rs
applications/web/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
applications/web/src/: App.tsx  cbor.ts  main.tsx  types.ts  wallet.ts
applications/web/src/assets/: Logo.tsx
applications/web/src/components/: AccountDetails.tsx  Breadcrumbs.tsx  CallTemplateForm.tsx  MenuItems.tsx  SecondaryHeading.tsx  StyledComponents.ts
applications/web/src/connect/: TariConnectButton.tsx  TariWalletDaemonConnectDialog.module.css  TariWalletDaemonConnectDialog.tsx  TariWalletSelectionDialog.tsx
applications/web/src/routes/: ErrorPage.tsx
applications/web/src/routes/home/: Home.tsx  NewIssuerDialog.tsx  Setup.tsx
applications/web/src/routes/issuer/: Issuer.tsx  SupplyControl.tsx  TransactionList.tsx  Transfers.tsx  WrappedToken.tsx  index.ts
applications/web/src/routes/users/: AddUser.tsx  GetUser.tsx  ManageUser.tsx  RecallTokens.tsx  Transfers.tsx  UserVault.tsx  Users.tsx  index.ts
applications/web/src/store/: account.ts  activeIssuer.ts  issuers.ts  provider.ts  settings.ts  stableCoinIssuer.ts
applications/web/src/theme/: LayoutMain.tsx
templates/private_stable_coin/common/: Cargo.toml
templates/private_stable_coin/issuer/: Cargo.toml
templates/private_stable_coin/issuer-no-user-badge/: Cargo.toml  tari.config.toml
templates/private_stable_coin/issuer-no-user-badge/manifests/: create_user_and_transfer.rs  initialize.rs
templates/private_stable_coin/issuer-no-user-badge/src/: config.rs  lib.rs  user_data.rs  wrapped_exchange_token.rs
templates/private_stable_coin/issuer-no-user-badge/tests/: test.rs
templates/private_stable_coin/issuer/manifests/: create_user_and_transfer.rs
templates/private_stable_coin/issuer/src/: config.rs  deny_list.rs  lib.rs  user_data.rs  wrapped_exchange_token.rs
templates/private_stable_coin/issuer/tests/: setup.rs  test.rs
templates/private_stable_coin/user_account/: Cargo.toml
templates/private_stable_coin_custom_account/common/: Cargo.toml
templates/private_stable_coin_custom_account/issuer/: Cargo.toml
templates/private_stable_coin_custom_account/issuer/src/: lib.rs
templates/private_stable_coin_custom_account/issuer/tests/: setup.rs  test.rs
templates/private_stable_coin_custom_account/user_account/: Cargo.toml
templates/private_stable_coin_custom_account/user_account/src/: lib.rs
templates/private_stable_coin_custom_account/user_account/tests/: support.rs  test.rs
templates/stable-coin/: Cargo.toml
templates/stable-coin/src/: lib.rs
templates/stable-coin/tests/: test.rs
