[workspace]
members = [
    "applications/cli",
]
resolver = "2"

[workspace.dependencies]
tari_template_lib = "0.3.0"
tari_template_abi = "0.3.0"
#tari_engine_types = "0.1.0"
#tari_wallet_daemon_client = "0.1.0"
tari_wallet_daemon_client = { git = "https://github.com/sdbondi/tari-dan.git", branch = "transaction-unsigned-transaction" }
tari_transaction = { git = "https://github.com/sdbondi/tari-dan.git", branch = "transaction-unsigned-transaction" }
tari_engine_types = { git = "https://github.com/sdbondi/tari-dan", branch = "transaction-unsigned-transaction" }
tari_dan_wallet_sdk = { git = "https://github.com/sdbondi/tari-dan", branch = "transaction-unsigned-transaction" }

tari_crypto = "0.20.0"

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
url = { workspace = true, features = [] }
tokio = { workspace = true, features = ["rt", "macros"] }

#async-trait = "0.1.77"
#anyhow = "1.0.79"
#axum = "0.7.4"
#axum-extra = "0.9.2"
#axum-jrpc = "0.6.1"
#ctrlc = "3.4.2"
#clap = { version = "4.4.18", features = ["derive"] }
#futures = "0.3.17"
#fern = "0.6.2"
#humantime = "2.1.0"
#jsonwebtoken = "9.2.0"
hex = "0.4.3"
#url = { version = "2.5.0", features = [] }
#sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
#tokio = { version = "1.36.0", features = ["rt", "macros"] }
#log = "0.4.20"
#reqwest = "0.11.24"
#serde = "1.0.192"
serde_json = "1.0.113"
#tower-http = { version = "0.5.1", default-features = false }
#thiserror = "1.0.56"

[patch.crates-io]
tari_template_lib = { git = "https://github.com/sdbondi/tari-dan.git", branch = "transaction-unsigned-transaction" }
tari_template_abi = { git = "https://github.com/sdbondi/tari-dan.git", branch = "transaction-unsigned-transaction" }
#tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
#tari_indexer_client = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
#tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
