[workspace]
members = [
    "applications/cli",
]
resolver = "2"

[workspace.dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_template_abi = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_wallet_sdk = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }

tari_crypto = "0.20.0"

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
url = { workspace = true, features = [] }
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = "1.0.113"
hex = "0.4.3"
