[workspace]
members = [
    "applications/cli",
]
resolver = "2"

[workspace.dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_template_abi = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_ootle_wallet_sdk = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }

tari_crypto = "0.22.0"

anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
url = { version = "2.5.4", features = [] }
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_json = "1.0.113"
hex = "0.4.3"
