[workspace]
[package]
name = "tari-stable-coin"
version = "0.1.0"
edition = "2021"

[dependencies]
#tari_template_lib = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_template_lib = { path = "../../../../dan/crates/template_lib" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
#tari_bor = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
tari_bor = { path = "../../../../dan/crates/tari_bor" }

[dev-dependencies]
tari_template_test_tooling = { path = "../../../../dan/crates/template_test_tooling" }
tari_transaction = { path = "../../../../dan/crates/transaction" }
tari_engine_types = { path = "../../../../dan/crates/engine_types" }
#tari_template_test_tooling = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
#tari_transaction = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
#tari_engine_types = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = 'debuginfo'

[lib]
crate-type = ["cdylib", "lib"]
