[workspace]
[package]
name = "tari-stable-coin"
version = "0.1.0"
edition = "2024"

[dependencies]
tari_template_lib = { version = "0.21", default-features = false, features = ["macro", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
talc = { version = "4.4.3", default-features = false, features = ["lock_api"] }

[dev-dependencies]
tari_template_test_tooling = "0.26"
ootle_byte_type = "0.3"

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = true

[lib]
crate-type = ["cdylib"]
