[workspace]
[package]
name = "private_stable_coin_common"
version = "0.1.0"
edition = "2021"

[dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-ootle.git", branch = "development" }
#tari_template_lib = { path = "../../../../dan/crates/template_lib"}
serde = { version = "1.0", default-features = false, features = ["derive"] }


